# Lib_OrangePi_GPIO

./: .gitignore  CMakeLists.txt
include/: gpio_pin.h  gpio_socket.h
src/: gpio_pin.cpp  gpio_socket.cpp
